@@ -1,7 +1,13 @@
-%ul.nav-links
-  = nav_link(page: dashboard_groups_path) do
-    = link_to dashboard_groups_path, title: 'Your groups', data: {placement: 'right'} do
-      Your Groups
-  = nav_link(page: explore_groups_path) do
-    = link_to explore_groups_path, title: 'Explore groups', data: {placement: 'bottom'} do
-      Explore Groups
+.top-area
+  %ul.nav-links
+    = nav_link(page: dashboard_groups_path) do
+      = link_to dashboard_groups_path, title: 'Your groups', data: {placement: 'right'} do
+        Your Groups
+    = nav_link(page: explore_groups_path) do
+      = link_to explore_groups_path, title: 'Explore groups', data: {placement: 'bottom'} do
+        Explore Groups
+  - if current_user.can_create_group?
+    .projects-search-form
+      = link_to new_group_path, class: "btn btn-new" do
+        = icon('plus')
+        New Group
