@@ -25,6 +25,7 @@ v 8.5.0 (unreleased)
   - Deprecate API "merge_request/:merge_request_id/...". Use "merge_requests/:merge_request_id/..." instead
   - Mark inline difference between old and new paths when a file is renamed
   - Support Akismet spam checking for creation of issues via API (Stan Hu)
+  - Improve UI consistency between projects and groups lists
 
 v 8.4.3
   - Increase lfs_objects size column to 8-byte integer to allow files larger
